fix leaderboard spacing

--- a/src/styles/Leaderboard.css
+++ b/src/styles/Leaderboard.css
@@ -1,6 +1,10 @@
 .Leaderboard-table-wrapper {
   height: 100%;
-  margin: 20px;
+  margin: 60px;
+  /* display: flex;
+  flex-wrap: nowrap;
+  justify-content: center; */
+  border-color: red;
 }
 
 .Leaderboard-table-body {
@@ -11,5 +15,5 @@
 }
 
 .Leaderboard-table-body td {
-  white-space: nowrap;
+  /* white-space: nowrap; */
 }
